Fixed graph responsiveness on small screens. Fixed wind compass disabled color.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -93,6 +93,11 @@
   width: 100%;
   height: 25rem;
 }
+@media (max-width: 700px) {
+.charts[data-v-2d724db6] {
+    grid-template-columns: minmax(10rem, 1fr);
+}
+}
 
 .icon {
   display: inline-block;
